[gd_scene load_steps=8 format=3 uid="uid://cbej72vi5osrq"]

[ext_resource type="Script" uid="uid://4mfb0mow8bns" path="res://scripts/enemies/enemy.gd" id="1_4befo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dyl0u"]
resource_local_to_scene = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sem4h"]
resource_local_to_scene = true

[sub_resource type="Animation" id="Animation_kopw6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_mnwau"]
resource_name = "hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bg74g"]
_data = {
&"RESET": SubResource("Animation_kopw6"),
&"hit": SubResource("Animation_mnwau")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yg5kl"]
bg_color = Color(1, 0, 0, 1)

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 32
collision_mask = 16
script = ExtResource("1_4befo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="HitCollider" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitCollider"]
shape = SubResource("RectangleShape2D_dyl0u")

[node name="PhysicsCollider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_sem4h")

[node name="SpikeCollider" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="PhysicsCollider" type="CollisionShape2D" parent="SpikeCollider"]
shape = SubResource("RectangleShape2D_sem4h")

[node name="HitIndicatorAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bg74g")
}
speed_scale = 3.0

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -10.0
offset_top = -14.0
offset_right = 10.0
offset_bottom = -10.0
theme_override_styles/fill = SubResource("StyleBoxFlat_yg5kl")
show_percentage = false

[node name="GroundRay" type="RayCast2D" parent="."]
position = Vector2(-10, 0)

[node name="ViewRay" type="RayCast2D" parent="."]
target_position = Vector2(-100, 0)

[connection signal="body_entered" from="HitCollider" to="." method="_on_hit_collider_body_entered"]
[connection signal="body_entered" from="SpikeCollider" to="." method="_on_spike_collider_body_entered"]
[connection signal="body_exited" from="SpikeCollider" to="." method="_on_spike_collider_body_exited"]
